Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "rust01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9fBboPxANygdJDmD5nvc7",
+      "authorship_tag": "ABX9TyPo5mVHhLxyewSF9Wa5vjdd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -361,14 +361,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "dpsoBNwA8iPv",
-        "outputId": "ae216045-0e6a-40f5-9989-50163f5d2221",
+        "outputId": "7d09a41d-f148-416b-9cd8-643dcec4ea5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "%%writefile grrs01.rs\n",
-        "use structopt::StructOpt;\n",
+        "use self::structopt::StructOpt;\n",
         "\n",
         "/// Search for a pattern in a file and display the lines that contain it.\n",
         "#[derive(StructOpt)]\n",
@@ -385,7 +385,7 @@
         "    let path = std::env::args().nth(2).expect(\"no path given\");\n",
         "}"
       ],
-      "execution_count": 60,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8AmSOcgvTmP1",
-        "outputId": "69f90f16-ef7b-4f5c-da9d-d677b62537bb",
+        "outputId": "189867cb-a958-438a-d4ee-c0d5c6af3125",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -409,16 +409,16 @@
         "!rustc grrs01.rs\n",
         "!./grrs01"
       ],
-      "execution_count": 61,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[0m\u001b[1m\u001b[38;5;9merror[E0432]\u001b[0m\u001b[0m\u001b[1m: unresolved import `structopt`\u001b[0m\n",
-            "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:1:5\u001b[0m\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;9merror[E0432]\u001b[0m\u001b[0m\u001b[1m: unresolved import `self::structopt`\u001b[0m\n",
+            "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:1:11\u001b[0m\n",
             "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m|\u001b[0m\n",
-            "\u001b[0m\u001b[1m\u001b[38;5;12m1\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0muse structopt::StructOpt;\u001b[0m\n",
-            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m    \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9m^^^^^^^^^\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9mmaybe a missing crate `structopt`?\u001b[0m\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;12m1\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0muse self::structopt::StructOpt;\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m          \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9m^^^^^^^^^\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9mmaybe a missing crate `structopt`?\u001b[0m\n",
             "\n",
             "\u001b[0m\u001b[1m\u001b[38;5;9merror\u001b[0m\u001b[0m\u001b[1m: cannot determine resolution for the derive macro `StructOpt`\u001b[0m\n",
             "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:4:10\u001b[0m\n",
@@ -439,6 +439,40 @@
             "\u001b[0m\u001b[1mFor more information about this error, try `rustc --explain E0432`.\u001b[0m\n",
             "thread 'main' panicked at 'no pattern given', grrs01.rs:2:19\n",
             "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kqAhd8wpWR3B",
+        "outputId": "501ecf65-57e9-41e6-835c-aa32b9dfaa44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls -la ./.config"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 40\n",
+            "drwxr-xr-x 1 root root 4096 Nov  6 17:30 .\n",
+            "drwxr-xr-x 1 root root 4096 Nov 13 11:09 ..\n",
+            "-rw-r--r-- 1 root root    7 Nov  6 17:29 active_config\n",
+            "-rw-r--r-- 1 root root    0 Nov  6 17:30 config_sentinel\n",
+            "drwxr-xr-x 2 root root 4096 Nov  6 17:29 configurations\n",
+            "-rw------- 1 root root    5 Jan  1  2040 gce\n",
+            "-rw-r--r-- 1 root root    3 Nov  6 17:29 .last_opt_in_prompt.yaml\n",
+            "-rw-r--r-- 1 root root   37 Nov  6 17:30 .last_survey_prompt.yaml\n",
+            "-rw-r--r-- 1 root root  135 Nov  6 17:30 .last_update_check.json\n",
+            "drwxr-xr-x 3 root root 4096 Nov  6 17:29 logs\n",
+            "-rw-r--r-- 1 root root   32 Nov  6 17:30 .metricsUUID\n"
           ],
           "name": "stdout"
         }
