Colaboratory を使用して作成しました

--- a/colabmarkdown.ipynb
+++ b/colabmarkdown.ipynb
@@ -6,7 +6,7 @@
       "name": "colabmarkdown.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNOJEnzG+hJMInZywmrTtyV",
+      "authorship_tag": "ABX9TyNvqU0Pu5RX1PNpixk5ojnb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5LUZ9LWe8RQ2",
-        "colab_type": "text"
+        "id": "5LUZ9LWe8RQ2"
       },
       "source": [
         "# colabmarkdown.ipynb"
@@ -38,23 +37,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7FC6zQYR8YUl",
-        "colab_type": "text"
+        "id": "7FC6zQYR8YUl"
       },
       "source": [
         "### メモ\n",
         "1. ColabのマークダウンはGitHubのマークダウンと基本は同じだが若干違う。\n",
-        "2. 最大の違いは`html`を貼り付けられないこと。Colabのマークダウンでは`html`は使えない。コードセルで`%%html`magicを使うことになる。\n",
+        "2. 最大の違いは`html`を貼り付けられないこと。Colabのマークダウンでは`html`は使えない。使える場合もあるが、保証されていない。コードセルで`%%html`magicを使うことになる。\n",
         "3. 細かい違いも、Colabだけを使用していると気にならないが、マークダウンにして他のサイトに貼り付けると表示がおかしい。\n",
         "4. 基本的には機能のほとんどないシンプルなマークダウンである。\n",
-        "5. このファイルの読者はColabで開き、実験しながら進むことを想定する。セルをクリックしてセルの編集ボタンを押すか、セルをダブルクリックして編集に入り、上下もしくは左右に編集結果を並べながらテキストセルを編集することになる。編集から抜けるには`Esc`か、編集から抜ける(マークダウンエディタを閉じる)ボタンを押す。"
+        "5. このファイルの読者はColabで開き、実験しながら進むことを想定する。セルをクリックしてセルの編集ボタンを押すか、セルをダブルクリックして編集に入り、上下もしくは左右に編集結果を並べながらテキストセルを編集することになる。編集から抜けるには`Esc`か、編集から抜ける(マークダウンエディタを閉じる)ボタンを押す。\n",
+        "6. 大なり記号(>)による引用、バッククオート(`)によるコード表示もcolabと他のサイトでは表示がちがったりする。 確実に文字列をそのままひょうじするには、コードセルに%%script falseとして、実行しないコードとして書くのがよいと思う。"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oKF3pSNx2czH",
-        "colab_type": "text"
+        "id": "oKF3pSNx2czH"
       },
       "source": [
         "# はじめに\n",
@@ -70,8 +68,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FVS3coKw2sCk",
-        "colab_type": "text"
+        "id": "FVS3coKw2sCk"
       },
       "source": [
         "# 基本的な書き方"
@@ -80,8 +77,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "x1iPUwX7U98b",
-        "colab_type": "text"
+        "id": "x1iPUwX7U98b"
       },
       "source": [
         "### 見出し\n",
@@ -91,8 +87,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yuVzN6l22maK",
-        "colab_type": "text"
+        "id": "yuVzN6l22maK"
       },
       "source": [
         "```\n",
@@ -105,8 +100,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3BXnFNSv6rCJ",
-        "colab_type": "text"
+        "id": "3BXnFNSv6rCJ"
       },
       "source": [
         "Colabでは`#`の数と位置によって自動で目次が作られ、目次からジャンプできるので、```### [見出し](#midashi)```とわざわざ書く必要はない。\n",
@@ -117,8 +111,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ypYRp-hOUnxe",
-        "colab_type": "text"
+        "id": "ypYRp-hOUnxe"
       },
       "source": [
         "### テキスト\n",
@@ -146,8 +139,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mmUDT2ZcVq14",
-        "colab_type": "text"
+        "id": "mmUDT2ZcVq14"
       },
       "source": [
         "### 引用\n",
@@ -179,8 +171,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7FSr7B8AR0Yx",
-        "colab_type": "text"
+        "id": "7FSr7B8AR0Yx"
       },
       "source": [
         "### リンク\n",
@@ -200,8 +191,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4baEfCx3UOsL",
-        "colab_type": "text"
+        "id": "4baEfCx3UOsL"
       },
       "source": [
         "### リスト\n",
@@ -230,8 +220,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lXbvfHub4Jlk",
-        "colab_type": "text"
+        "id": "lXbvfHub4Jlk"
       },
       "source": [
         "### 入れ子になったリスト\n",
@@ -255,8 +244,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1ucBl1FYVwih",
-        "colab_type": "text"
+        "id": "1ucBl1FYVwih"
       },
       "source": [
         "\n",
@@ -279,8 +267,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gH5TGFrn_Gso",
-        "colab_type": "text"
+        "id": "gH5TGFrn_Gso"
       },
       "source": [
         "### エスケープ\n",
@@ -300,8 +287,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eMI_Ss6BCWvB",
-        "colab_type": "text"
+        "id": "eMI_Ss6BCWvB"
       },
       "source": [
         "# 数式\n",
@@ -326,8 +312,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MsecsIvL3Smh",
-        "colab_type": "text"
+        "id": "MsecsIvL3Smh"
       },
       "source": [
         "# 表\n",
@@ -349,8 +334,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4eSs8RGWA_7P",
-        "colab_type": "text"
+        "id": "4eSs8RGWA_7P"
       },
       "source": [
         "\n",
@@ -364,8 +348,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Gy9xJyhGAfKM",
-        "colab_type": "text"
+        "id": "Gy9xJyhGAfKM"
       },
       "source": [
         "# 参考"
@@ -374,8 +357,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w4In1UCM_EEw",
-        "colab_type": "text"
+        "id": "w4In1UCM_EEw"
       },
       "source": [
         "\n",
