Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -6,7 +6,7 @@
       "name": "rust01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPQqDMK5Xovmh4nsSglFWiT",
+      "authorship_tag": "ABX9TyN6juwXQ65NGyD8zbsPhZV5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "%%capture\n",
         "!apt install rustc --fix-missing"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,13 +93,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a62017c0-a224-401d-ff2b-89f49cd7c5fc"
+        "outputId": "0b84b22e-5c40-484c-837e-5d1a84ed5f05"
       },
       "source": [
         "# インストールの確認\n",
         "!rustc --version"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "%env USER=root\n",
         "!cargo init"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "    println!(\"Hello, world!\");\n",
         "}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,16 +199,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "cp18zfSS9RtH",
-        "outputId": "3b50a14e-ad7e-4587-e8e9-3758a2cad8c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b50a14e-ad7e-4587-e8e9-3758a2cad8c8"
       },
       "source": [
         "# コンパイル\n",
         "!cargo build"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "# コンパイルして実行\n",
         "!cargo run "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,10 @@
       "source": [
         "この例では、grrs というプログラムで、test.txt の中の foobar という文字列を含む行をプリントアウトすることを想定している。\n",
         "\n",
-        "プログラム名のあとの文字列をコマンドライン引数 command line arguments とか、フラグ(--this)と呼び、大雑把に言うとスペースで区切られている文字列のリストとしてオペレーティングシステムの内部的には処理されている。\n",
+        "プログラム名のあとの文字列は大雑把にいうとスペースで区切られている文字列のリストとしてオペレーティングシステムの内部的には処理されている。\n",
+        "\n",
+        "コマンドライン引数と呼ばれる。 --this というような書き方でフラグをしていするのにも使われる。\n",
+        "\n",
         "\n"
       ]
     },
@@ -385,14 +388,27 @@
         "id": "ziPrCPABhG9m"
       },
       "source": [
+        "## コマンドライン引数の取得\n",
+        "\n",
+        "標準ライブラリーに関数 \n",
+        "std::env::args() \n",
+        "があり、イテレーターの index 0 にはプログラム自身、今回の例では grrs が入っている。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yrxlp29mazZl"
+      },
+      "source": [
         "\n",
         "\n",
         "\n",
         "\n",
-        "There are many ways to think about these arguments, and how to parse them into something more easy to work with. You will also need to tell the users of your program which arguments they need to give and in which format they are expected.\n",
         "\n",
         "Getting the arguments\n",
-        "The standard library contains the function std::env::args() that gives you an iterator of the given arguments. The first entry (at index 0) will be the name your program was called as (e.g. grrs), the ones that follow are what the user wrote afterwards.\n",
+        "The standard library contains the function that gives you an iterator of the given arguments. The first entry (at index 0) will be the name your program was called as (e.g. grrs), the ones that follow are what the user wrote afterwards.\n",
         "\n",
         "Getting the raw arguments this way is quite easy (in file src/main.rs, after fn main() {):\n"
       ]
