Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -6,7 +6,7 @@
       "name": "rust01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBUgPSgv/SSFvOQo9dfh5I",
+      "authorship_tag": "ABX9TyMn5RXQAMUFUUtLzJPzfnO5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "%%capture\n",
         "!apt install rustc --fix-missing"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "# インストールの確認\n",
         "!rustc --version"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "# 環境をつくるコマンドの cargo も入っている\n",
         "!cargo --version"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "%env USER=root\n",
         "!cargo init"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "    println!(\"Hello, world!\");\n",
         "}"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "# コンパイルして実行\n",
         "!cargo run "
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +412,7 @@
         "    let path = std::env::args().nth(2).expect(\"no path given\");\n",
         "}"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,10 +489,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qhstw79skbCE",
-        "outputId": "185fa0ab-b1b6-46c7-c157-a363685a4306",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "185fa0ab-b1b6-46c7-c157-a363685a4306"
       },
       "source": [
         "%%writefile Cargo.toml\n",
@@ -511,7 +511,7 @@
         "name = \"content\"\n",
         "path = \"main.rs\""
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,10 +538,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pEC2Fo6Ek5_E",
-        "outputId": "e6c9d86e-9cba-4122-c9ad-ab629f8ab712",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e6c9d86e-9cba-4122-c9ad-ab629f8ab712"
       },
       "source": [
         "%%writefile main.rs\n",
@@ -561,7 +561,7 @@
         "    let args = Cli::from_args();\n",
         "}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,16 +641,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "gkmqD2iW8sDM",
-        "outputId": "d61d2284-fc22-4035-9ed9-52a62c7eb8b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d61d2284-fc22-4035-9ed9-52a62c7eb8b2"
       },
       "source": [
         "# 実験: やってみる\n",
         "!cargo run"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,16 +697,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "hJnqDaWY-ZEz",
-        "outputId": "a112b63c-cc2b-4674-cefd-9d8092218dbe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a112b63c-cc2b-4674-cefd-9d8092218dbe"
       },
       "source": [
         "# 実験 引数を付けてみる\n",
         "!cargo run -- some-pattern some-file"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,10 +753,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jc4q-SUs-orc",
-        "outputId": "b05f4cbb-18e5-4dfa-fed9-5aa60f1a06e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b05f4cbb-18e5-4dfa-fed9-5aa60f1a06e5"
       },
       "source": [
         "%%writefile main.rs\n",
@@ -777,7 +777,7 @@
         "    println!(\"{} => {:?}\", args.pattern, args.path)\n",
         "}"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,16 +792,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "qUBKP7b6-5k8",
-        "outputId": "98a7c307-8626-47bb-8e1d-7fe6a8d1a34e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "98a7c307-8626-47bb-8e1d-7fe6a8d1a34e"
       },
       "source": [
         "# 実験\n",
         "!cargo run -- some-pattern some-file"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,10 +828,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EsQX3x9hBWjQ",
-        "outputId": "8f6ba309-408b-4b7c-ac2c-13aaee999023",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8f6ba309-408b-4b7c-ac2c-13aaee999023"
       },
       "source": [
         "%%writefile main.rs\n",
@@ -858,7 +858,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,15 +873,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "NxvWCszDB7F0",
-        "outputId": "feaf6093-a70c-4c8a-ba92-79bc138302d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "feaf6093-a70c-4c8a-ba92-79bc138302d7"
       },
       "source": [
         "!cargo run -- main main.rs"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,16 +911,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "UfC_2OAmCRpR",
-        "outputId": "8af13918-3565-431e-be07-68aeec2e6cd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8af13918-3565-431e-be07-68aeec2e6cd2"
       },
       "source": [
         "# 実験\n",
         "!cargo run -- path main.rs"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +975,295 @@
         "id": "jAtsKCTxD0cR"
       },
       "source": [
-        ""
+        "Nicer error reporting\n",
+        "\n",
+        "We all can do nothing but accept the fact that errors will occur. And in contrast to many other languages, it’s very hard not to notice and deal with this reality when using Rust: As it doesn’t have exceptions, all possible error states are often encoded in the return types of functions.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JCSf91rjRtsd"
+      },
+      "source": [
+        "\n",
+        "## Results\n",
+        "\n",
+        "A function like read_to_string doesn’t return a string. Instead, it returns a Result that contains either a String or an error of some type (in this case std::io::Error).\n",
+        "\n",
+        "How do you know which it is? Since Result is an enum, you can use match to check which variant it is:\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bgoLPc-3RonH"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "let result = std::fs::read_to_string(\"test.txt\");\n",
+        "match result {\n",
+        "    Ok(content) => { println!(\"File content: {}\", content); }\n",
+        "    Err(error) => { println!(\"Oh noes: {}\", error); }\n",
+        "}\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "81ajupF3RlEn"
+      },
+      "source": [
+        "\n",
+        "Aside: Not sure what enums are or how they work in Rust? Check this chapter of the Rust book to get up to speed.\n",
+        "\n",
+        "## Unwrapping\n",
+        "\n",
+        "Now, we were able to access the content of the file, but we can’t really do anything with it after the match block. For this, we’ll need to somehow deal with the error case. The challenge is that all arms of a match block need to return something of the same type. But there’s a neat trick to get around that:\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oFEa4LvZRhnB"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "let result = std::fs::read_to_string(\"test.txt\");\n",
+        "let content = match result {\n",
+        "    Ok(content) => { content },\n",
+        "    Err(error) => { panic!(\"Can't deal with {}, just exit here\", error); }\n",
+        "};\n",
+        "println!(\"file content: {}\", content);\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aA5oSCF7ReTK"
+      },
+      "source": [
+        "\n",
+        "We can use the String in content after the match block. If result were an error, the String wouldn’t exist. But since the program would exit before it ever reached a point where we use content, it’s fine.\n",
+        "\n",
+        "This may seem drastic, but it’s very convenient. If your program needs to read that file and can’t do anything if the file doesn’t exist, exiting is a valid strategy. There’s even a shortcut method on Results, called unwrap:\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OBeX9aPmRbGy"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "let content = std::fs::read_to_string(\"test.txt\").unwrap();\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LdkdXUAhRYxK"
+      },
+      "source": [
+        "\n",
+        "# No need to panic\n",
+        "\n",
+        "Of course, aborting the program is not the only way to deal with errors. Instead of the panic!, we can also easily write return:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3SFZp11MRV6D"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "let result = std::fs::read_to_string(\"test.txt\");\n",
+        "let _content = match result {\n",
+        "    Ok(content) => { content },\n",
+        "    Err(error) => { return Err(error.into()); }\n",
+        "};\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mDKp5gdARSyU"
+      },
+      "source": [
+        "\n",
+        "This, however changes the return type our function needs. Indeed, there was something hidden in our examples all this time: The function signature this code lives in. And in this last example with return, it becomes important. Here’s the full example:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "peQbgvtCROc1"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "fn main() -> Result<(), Box<dyn std::error::Error>> {\n",
+        "    let result = std::fs::read_to_string(\"test.txt\");\n",
+        "    let content = match result {\n",
+        "        Ok(content) => { content },\n",
+        "        Err(error) => { return Err(error.into()); }\n",
+        "    };\n",
+        "    println!(\"file content: {}\", content);\n",
+        "    Ok(())\n",
+        "}\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DTjnLGezRKtn"
+      },
+      "source": [
+        "\n",
+        "Our return type is a Result! This is why we can write return Err(error); in the second match arm. See how there is an Ok(()) at the bottom? It’s the default return value of the function and means “Result is okay, and has no content”.\n",
+        "\n",
+        "Aside: Why is this not written as return Ok(());? It easily could be – this is totally valid as well. The last expression of any block in Rust is its return value, and it is customary to omit needless returns.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1tgetGS2R77i"
+      },
+      "source": [
+        "\n",
+        "# Question Mark\n",
+        "\n",
+        "Just like calling .unwrap() is a shortcut for the match with panic! in the error arm, we have another shortcut for the match that returns in the error arm: ?.\n",
+        "\n",
+        "That’s right, a question mark. You can append this operator to a value of type Result, and Rust will internally expand this to something very similar to the match we just wrote.\n",
+        "\n",
+        "Give it a try:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HmCqj-q7RHG_"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "\n",
+        "fn main() -> Result<(), Box<dyn std::error::Error>> {\n",
+        "    let content = std::fs::read_to_string(\"test.txt\")?;\n",
+        "    println!(\"file content: {}\", content);\n",
+        "    Ok(())\n",
+        "}\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SGq8TQ5PRBwq"
+      },
+      "source": [
+        "\n",
+        "Very concise!\n",
+        "\n",
+        "Aside: There are a few more things happening here that are not required to understand to work with this. For example, the error type in our main function is Box<dyn std::error::Error>. But we’ve seen above that read_to_string returns a std::io::Error. This works because ? expands to code that converts error types.\n",
+        "\n",
+        "Box<dyn std::error::Error> is also an interesting type. It’s a Box that can contain any type that implements the standard Error trait. This means that basically all errors can be put into this box, so we can use ? on all of the usual functions that return Results.\n",
+        "\n",
+        "## Providing Context\n",
+        "\n",
+        "The errors you get when using ? in your main function are okay, but they are not great. For example: When you run std::fs::read_to_string(\"test.txt\")? but the file test.txt doesn’t exist, you get this output:\n",
+        "\n",
+        "\n",
+        "Error: Os { code: 2, kind: NotFound, message: \"No such file or directory\" }\n",
+        "In cases where your code doesn’t literally contain the file name, it would be very hard to tell which file was NotFound. There are multiple ways to deal with this.\n",
+        "\n",
+        "For example, we can create our own error type, and then use that to build a custom error message:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s2r7nVsMQ9Gr"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "#[derive(Debug)]\n",
+        "struct CustomError(String);\n",
+        "\n",
+        "fn main() -> Result<(), CustomError> {\n",
+        "    let path = \"test.txt\";\n",
+        "    let content = std::fs::read_to_string(path)\n",
+        "        .map_err(|err| CustomError(format!(\"Error reading `{}`: {}\", path, err)))?;\n",
+        "    println!(\"file content: {}\", content);\n",
+        "    Ok(())\n",
+        "}\n",
+        "\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4znuIyFGQ6Dd"
+      },
+      "source": [
+        "\n",
+        "Now, running this we’ll get our custom error message:\n",
+        "\n",
+        "```\n",
+        "Error: CustomError(\"Error reading `test.txt`: No such file or directory (os error 2)\")\n",
+        "Not very pretty, but we can easily adapt the debug output for our type later on.\n",
+        "```\n",
+        "This pattern is in fact very common. It has one problem, though: We don’t store the original error, only its string representation. The often used anyhow library has a neat solution for that: Similar to our CustomError type, its Context trait can be used to add a description. Additionally, it also keeps the original error, so we get a “chain” of error messages pointing out the root cause.\n",
+        "\n",
+        "Let’s first import the anyhow crate by adding anyhow = \"1.0\" to the [dependencies] section of our Cargo.toml file.\n",
+        "\n",
+        "The full example will then look like this:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tmJxuOX9QviS"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "use anyhow::{Context, Result};\n",
+        "\n",
+        "fn main() -> Result<()> {\n",
+        "    let path = \"test.txt\";\n",
+        "    let content = std::fs::read_to_string(path)\n",
+        "        .with_context(|| format!(\"could not read file `{}`\", path))?;\n",
+        "    println!(\"file content: {}\", content);\n",
+        "    Ok(())\n",
+        "}\n",
+        "This will print an error:\n",
+        "\n",
+        "\n",
+        "Error: could not read file `test.txt`\n",
+        "\n",
+        "Caused by:\n",
+        "    No such file or directory (os error 2)\n",
+        "```"
       ]
     }
   ]
