Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,7 +6,7 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7d/1UCU6JJ+831RsCC6Cv",
+      "authorship_tag": "ABX9TyPSukO/S4WOoCtfKufJISe4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -526,13 +526,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mc2my2c0es1D"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mc2my2c0es1D",
+        "outputId": "b60ec69f-d928-4fda-8d4b-d6867088981b"
       },
       "source": [
-        ""
+        "%%writefile variable01.cpp\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int myNum = 15;\n",
+        "  cout << myNum;\n",
+        "  return 0;\n",
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing variable01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JRO5IbRYdIr8",
+        "outputId": "de6c9f6a-9cae-428e-8c65-d37faf72f174",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ variable01.cpp -o variable01; ./variable01"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
