Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPbkd7OcyWhSgM/87kWsDg+",
+      "authorship_tag": "ABX9TyPc8oo0a8aL8v64ND5fY66X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "# メモ\n",
         "\n",
         "1. Colab で開かれることを想定している。 Colab で読んでください。\n",
-        "1. Colab のコードセルで"
+        "1. Colab のコードセルで、次のコードセル"
       ]
     },
     {
@@ -160,7 +160,7 @@
         "id": "s0dgqgKVF5Ya"
       },
       "source": [
-        "コメントが Python は シャープで、cpp は スラッシュ。\n"
+        "コメントが Python は シャープ # で、cpp は スラッシュ。 `//` or `/* ~ */`\n"
       ]
     },
     {
@@ -169,7 +169,7 @@
         "id": "lMns0gsLA_3Q"
       },
       "source": [
-        "# w3schoo の目次\n",
+        "# w3school の目次\n",
         "w3school では次のメニューで学ぶことが推奨されている。\n",
         "* C++ Tutorial\n",
         "  * C++ HOME\n",
@@ -582,10 +582,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3aRUXLCpIdJu",
-        "outputId": "61c89355-ac6e-4d59-ccd4-fd38890c789d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "61c89355-ac6e-4d59-ccd4-fd38890c789d"
       },
       "source": [
         "%%writefile variable02.cpp\n",
@@ -599,7 +599,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,15 +614,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "yCSbQFadIkgW",
-        "outputId": "63edb3dd-37b3-42f4-f9f3-a46d277a0193",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "63edb3dd-37b3-42f4-f9f3-a46d277a0193"
       },
       "source": [
         "!g++ variable02.cpp -o variable02; ./variable02"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,10 +637,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AyPpeOqOJAYm",
-        "outputId": "5dabb993-6810-4157-d0a2-89dfa3ae5c75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5dabb993-6810-4157-d0a2-89dfa3ae5c75"
       },
       "source": [
         "%%writefile variable03.cpp\n",
@@ -662,7 +662,7 @@
         "    cout << myBoolean << \"\\n\";\n",
         "}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,15 +677,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "1gfaLXePKNyp",
-        "outputId": "6bbdc30e-0ffc-426f-da0b-34ab3f2cc9d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6bbdc30e-0ffc-426f-da0b-34ab3f2cc9d6"
       },
       "source": [
         "!g++ variable03.cpp -o variable03; ./variable03"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
